--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
-name: Publish Docker image
+name: Publish Docker Image
 
 on:
   push:
@@ -38,7 +38,7 @@ env:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build and push image to Docker Hub
     runs-on: ubuntu-latest
     
     permissions:
@@ -65,7 +65,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           export MAVEN_OPTS="${MAVEN_INSTALL_OPTS}"
-          $MAVEN clean install ${MAVEN_FAST_INSTALL} -pl ':trino-server,:trino-cli'
+          $MAVEN clean install ${MAVEN_FAST_INSTALL} -pl '!:trino-docs,!:trino-server-rpm'
           core/docker/build.sh -a amd64
           docker tag trino:461-SNAPSHOT prabodhtr/trino:custom-trino-461-amd64
           docker push prabodhtr/trino:custom-trino-461-amd64
