--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,26 +48,35 @@ jobs:
       id-token: write
     
     steps:
-      - name: Check out the repo
+      - name: check out the repo
         uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+      - name: free disk space
+        run: |
+          sudo swapoff -a
+          sudo rm -f /swapfile
+          sudo apt clean
+          docker rmi $(docker image ls -aq)
+          df -h
+
+      - name: setup java 22
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '22'
       
-      - name: Set up QEMU
+      - name: set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
           platforms: amd64
 
-      - name: Log in to Docker Hub
+      - name: login to dockerhub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: build and push docker image
         run: |
           export MAVEN_OPTS="${MAVEN_INSTALL_OPTS}"
           $MAVEN clean install ${MAVEN_FAST_INSTALL} -pl '!:trino-docs,!:trino-server-rpm'
